# Synthra

./: README.md  pyproject.toml
examples/: client.py  distill_capture.py  generate_pipeline.py  serve_vllm.py  vllm_4gb.yaml  workflow_judge.py
examples/configs/: sglang_4gb.yaml  vllm.yaml  vllm_distill.yaml
synthra/: __init__.py  __main__.py  cli.py
synthra/backends/: __init__.py  base.py  factory.py  sglang.py  vllm.py
synthra/distill/: __init__.py  logprobs.py
synthra/pipeline/: __init__.py  blobs.py  checkpoint.py  export.py  pipeline.py
synthra/workflow/: __init__.py  workflow.py
tests/: test_backends.py  test_blobs.py  test_cli.py  test_distill.py  test_pipeline.py  test_workflow.py
