[project]
name = "synthra"
version = "0.0.1"
description = "Create synthetic data leveraging other models, heuristics, and rules — for finetuning models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy inference backends are opt-in: `uv pip install -e '.[vllm]'`.
vllm = ["vllm>=0.23.0"]
# Teacher-logprob capture for off-policy distillation.
distill = ["numpy>=1.24", "safetensors>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
